--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://kyleferguson91.github.io/project-todolist/dist/">
+<meta http-equiv="refresh" content="0; url=https://kyleferguson91.github.io/project-todolist/dist/index.html">
