--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../dist/main.js" type="module" de></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../project-todolist/dist/style.css">
     <title>Document</title>
 </head>
 <body>
